# zone

./: .gitignore  CLAUDE.md  README.md  TODO.md  flake.nix
.claude/: settings.json
.claude/commands/: design-it-twice.md  handoff.md  polish.md
.claude/skills/domain-model/: SKILL.md
.githooks/: pre-commit
.normalize/: config.toml
agent/: init.lua
agent/agent/: parser.lua
docs/: about.md  index.md  package.json
docs/.vitepress/: config.ts
docs/design/: distilled-insights.md  index.md  iris-brainstorm.md  iris.md  prior-art.md  servers-brainstorm.md
docs/iris/: index.md
docs/projects/: index.md  seeds.md  wisteria.md
habitat/: Cargo.toml
iris/: init.lua
iris/.spore/: config.toml
iris/iris/: cluster.lua  split.lua  temporal.lua
keybinds/: package.json
keybinds/src/: components.js  index.js
keybinds/styles/: palette.css
lotus/: .gitignore  Cargo.toml
lotus/crates/lotus-server/: Cargo.toml
lotus/crates/lotus-server/src/: main.rs
lotus/crates/rhi-zone-lotus-server/: Cargo.toml
lotus/crates/rhi-zone-lotus-server/src/: main.rs
lotus/web/: package.json
seeds/archaeology/: seed.toml
seeds/creation/: seed.toml
seeds/lab/: seed.toml
tooling/claude-hooks/: SUMMARY.md  block-blocking-bash.sh  block-mainsession-exploration.sh  inject-orchestrator-rules.sh  orchestrator-rules.md  orchestrator-workflows.md  plan-envelope-antibody.sh  post-history.sh  subagent-decomposition-check.sh  verify-hooks.sh
wisteria/: myenv.toml
wisteria/.moonlet/: config.toml
wisteria/.spore/: config.toml
wisteria/wisteria/: commands.lua  risk.lua
(+26 files in other folders)
