[package]
name = "lotus-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP + WebSocket server for Lotus object store"

[[bin]]
name = "lotus"
path = "src/main.rs"

[dependencies]
lotus-core = { path = "../lotus-core" }
trellis = { git = "https://github.com/rhizome-lab/trellis", features = ["http", "ws"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
